--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 
 span {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 div {
-    width: 800px;
-    height: 800px;
-    margin: 50px;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    border-radius: 20px;
 }
 
 .red {
